2. Application Tier/kube-manifests/default-app/1-default-ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-default-price-predictor-service
  namespace: dev
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: ingress-groups-demo # if we dont give a name, a default name will be used for the ALB
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /health_check   
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    ## SSL Settings
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:100163808729:certificate/988f7ea3-200a-4a85-a5f7-89db82342958
    ## Even if user hits http:80, redirect traffic to the secure https:443 automatically
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    ## Ingress groups specific annotations
    alb.ingress.kubernetes.io/group.name: ml-apps.web
    alb.ingress.kubernetes.io/group.order: '30'
spec:
    defaultBackend:
        service:
            name: diamond-price-predictor-service
            port:
                number: 80
